--- a/itRacedData/assets/styles/component.scss
+++ b/itRacedData/assets/styles/component.scss
@@ -93,8 +93,6 @@ $font: 'Open Sans', sans-serif;
             z-index: 1;
         }
 
-
-
         .menu__btn > span,
         .menu__btn > span::before,
         .menu__btn > span::after {
@@ -121,9 +119,9 @@ $font: 'Open Sans', sans-serif;
             top: 11px;
         }
 
-#menu__toggle, .menu__btn {
-    display: none;
-}
+        #menu__toggle, .menu__btn {
+            display: none;
+        }
 
         .header__navigation {
             margin-left: auto;
@@ -147,6 +145,8 @@ $font: 'Open Sans', sans-serif;
                 line-height: 16px;
                 color: $color-text;
                 position: relative;
+                transition: .3s;
+
                 &.active {
                     font-weight: 700;
                 }
@@ -166,7 +166,7 @@ $font: 'Open Sans', sans-serif;
     .wrapper {
         margin: 0 auto;
         padding: 0 20px;
-        max-width: 994px;
+        max-width: 1034px;
     }
 
     .contact__content {
@@ -235,21 +235,22 @@ $font: 'Open Sans', sans-serif;
             -moz-transform: translateY(50%);
             -ms-transform: translateY(50%);
             -o-transform: translateY(50%);
-}
+        }
 
         form {
-            flex-basis: 44%;
+            flex-basis: 46%;
             display: flex;
             flex-direction: column;
 
             .input {
                 border: none;
-                border-bottom: 2px solid rgba(26, 64, 67, 0.5);
+                border-bottom: 2px solid #58A086;
                 padding: 10px 20px;
                 margin-bottom: 30px;
                 @extend %text-style;
                 line-height: 16px;
-                font-weight: 300;
+                font-weight: 400;
+                color: $color-text;
                 text-align: left;
                 &::placeholder {
                     @extend %text-style;
@@ -270,7 +271,7 @@ $font: 'Open Sans', sans-serif;
         }
 
         .contact__information {
-            flex-basis: 44%;
+            flex-basis: 46%;
             background: #58A086;
             padding: 30px 50px;
             height: 100%;
@@ -292,7 +293,7 @@ $font: 'Open Sans', sans-serif;
                     margin-bottom: 0;
                     p {
                         background: url(../icon/geo.svg) no-repeat;
-                        background-position: top left;
+                        background-position: top 5px left;
                     }
                 }
                 
@@ -302,8 +303,7 @@ $font: 'Open Sans', sans-serif;
                     font-size: 24px;
                     line-height: 28px;
                     color: #FFFFFF;
-                    max-width: 288px;
-                    padding-left: 30px;
+                    padding-left: 55px;
                     
                 }
             }
@@ -311,7 +311,7 @@ $font: 'Open Sans', sans-serif;
             .block-contact:nth-child(2) {
                 p {
                     background: url(../icon/email.svg) no-repeat;
-                    background-position: top left;
+                    background-position: center left;
                     
                 }
             }
@@ -319,7 +319,7 @@ $font: 'Open Sans', sans-serif;
             .block-contact:nth-child(3) {
                 p {
                     background: url(../icon/phone.svg) no-repeat;
-                    background-position: top left;
+                    background-position: center left;
                     
                 }
             }
@@ -327,7 +327,7 @@ $font: 'Open Sans', sans-serif;
             .block-contact:nth-child(4) {
                 p {
                     background: url(../icon/geo.svg) no-repeat;
-                    background-position: top left;
+                    background-position: top 5px left;
                     
                 }
             }
@@ -390,6 +390,7 @@ $font: 'Open Sans', sans-serif;
                     line-height: 16px;
                     color: #fff;
                     font-weight: 300;
+                    transition: .3s;
 
                     &.active {
                         font-weight: 700;
@@ -450,7 +451,7 @@ $font: 'Open Sans', sans-serif;
 
             span {
                 padding-right: 20px;
-                text-transform: uppercase;
+                text-transform: capitalize;
                 font-weight: 400;
                 font-size: 14px;
             }
@@ -502,12 +503,16 @@ $font: 'Open Sans', sans-serif;
             .second-lines {
                 right: 5px;
             }
+
+            
             .contact__information {
                 padding: 30px 15px;
 
                 .info__title {
                     text-align: center;
                 }
+
+
             }
         }
     }
