--- a/itRacedData/assets/styles/faq.scss
+++ b/itRacedData/assets/styles/faq.scss
@@ -95,8 +95,6 @@ $font: 'Open Sans', sans-serif;
             z-index: 1;
         }
 
-
-
         .menu__btn > span,
         .menu__btn > span::before,
         .menu__btn > span::after {
@@ -123,9 +121,9 @@ $font: 'Open Sans', sans-serif;
             top: 11px;
         }
 
-#menu__toggle, .menu__btn {
-    display: none;
-}
+        #menu__toggle, .menu__btn {
+            display: none;
+        }
 
         .header__navigation {
             margin-left: auto;
@@ -149,7 +147,7 @@ $font: 'Open Sans', sans-serif;
                 line-height: 16px;
                 color: $color-text;
                 position: relative;
-
+                transition:  .3s;
                 &.active {
                     font-weight: 700;
                 }
@@ -159,10 +157,6 @@ $font: 'Open Sans', sans-serif;
                 font-weight: 700;
                 
             }
-
-            // .navigation__item {
-            //     margin-left: 20px;
-            // } 
         }
     }
 }
@@ -180,6 +174,7 @@ $font: 'Open Sans', sans-serif;
         list-style: none;
         margin-top: 60px;
         position: relative;
+        background: #fff;
         
         .first-lines {
             position: absolute;
@@ -216,6 +211,11 @@ $font: 'Open Sans', sans-serif;
             width: 4px;
             height: 47px;
             background: $color-text;
+            transform: translateY(50%);
+            -webkit-transform: translateY(50%);
+            -moz-transform: translateY(50%);
+            -ms-transform: translateY(50%);
+            -o-transform: translateY(50%);
             
             &::after {
                 content: "";
@@ -235,54 +235,71 @@ $font: 'Open Sans', sans-serif;
                 bottom:0px;
                 background: $color-text;
             }
-            transform: translateY(50%);
-            -webkit-transform: translateY(50%);
-            -moz-transform: translateY(50%);
-            -ms-transform: translateY(50%);
-            -o-transform: translateY(50%);
-}
-
-
+            
+        }
         .question__item {
             cursor: pointer;
-            font-family: $font;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 16px;
+            
             color: $color-text;
             padding-bottom: 10px;
-            margin-bottom: 30px;
-            position: relative;
-            background: url('../icon/arrow-down.svg') no-repeat;
-            background-position: top 5px right;
             border-bottom: 2px solid rgba(26, 64, 67, 0.5);
-            padding-bottom: 8px;
-            &.active {
-                font-weight: 700;
-                background: url('../icon/arrow-top.svg') no-repeat;
-                background-position: top 5px right;
-                border-bottom: none;
-                .answer {
-                    display: block;
-                    padding-top: 5px;
-                    border-top: 2px solid rgba(26, 64, 67, 0.5);
-                }
-            }
+            padding-top: 20px;
+            position: relative;
 
-            .answer {
+            &::before {
+                content: "";
+                position: absolute;
+                top: 50%;
+                right: 0;
+                transform: translateY(-50%);
+                width: 25px;
+                height: 25px;
+                background: url(../icon/arrow-down.svg) no-repeat;
+                background-position: center center;
+                transition: all .4s ease-in-out;
+                -webkit-transition: all .4s ease-in-out;
+                -moz-transition: all .4s ease-in-out;
+                -ms-transition: all .4s ease-in-out;
+                -o-transition: all .4s ease-in-out;
+            }
+            .question__title {
                 font-family: $font;
                 font-size: 16px;
-                font-weight: 300;
                 line-height: 16px;
-                color: $color-text;
-                display: none;
-                line-height: 26px;
-                margin-top: 8px;
+                font-weight: 400;
+                transition: 0.3s;
+
+                &:hover {
+                    font-weight: 700;
+                }
             }
-            &:hover {
+            &.active   .question__title {
                 font-weight: 700;
             }
+            &.active + .answer {
+                max-height: 1000px;
+            }
+            &.active::before{
+                -webkit-transform: translateY(-50%) rotate(-180deg);
+                -moz-transform: translateY(-50%) rotate(-180deg);
+                -ms-transform: translateY(-50%) rotate(-180deg);
+                -o-transform: translateY(-50%) rotate(-180deg);
+                transform: translateY(-50%) rotate(-180deg);
+                transform-origin: center center;                    
+            }
         }
+
+            .answer {
+                padding-top: 10px;
+                font-family: $font;
+                color: $color-text;
+                max-height: 0;
+                font-weight: 300;
+                font-size: 16px;
+                line-height: 26px;
+                overflow: hidden;
+                transition: max-height 0.4s ease-out;
+            }
     }
 }
 
@@ -297,7 +314,6 @@ $font: 'Open Sans', sans-serif;
         max-width: 1072px;
         margin: 0 auto;
         padding: 0 20px;
-
     }
 
     .footer-block {
@@ -341,6 +357,8 @@ $font: 'Open Sans', sans-serif;
                     line-height: 16px;
                     color: #fff;
                     font-weight: 300;
+                    transition: .3s;
+
                     &.active {
                         font-weight: 700;
                     }
@@ -349,7 +367,6 @@ $font: 'Open Sans', sans-serif;
                     }
                 }
             }
-
         }
 
         .button {
@@ -375,10 +392,7 @@ $font: 'Open Sans', sans-serif;
                 color: #fff;
                 font-size: 18px;
             }
-
             margin-bottom: 20px;
-
-            
         }
         .left-block {
             .text-footer {
@@ -388,7 +402,6 @@ $font: 'Open Sans', sans-serif;
                 padding-right: 15px;
                 
             }
-            
         }
 
         .text{
@@ -399,7 +412,7 @@ $font: 'Open Sans', sans-serif;
 
             span {
                 padding-right: 20px;
-                text-transform: uppercase;
+                text-transform: capitalize;
                 font-weight: 400;
                 font-size: 14px;
             }
@@ -447,6 +460,10 @@ $font: 'Open Sans', sans-serif;
         padding-bottom: 140px;
         .first-lines,.second-lines {
             display: none;
+        }
+
+        .list__questions .question__item .question__title {
+            max-width: 575px;
         }
     }
 
@@ -508,9 +525,9 @@ $font: 'Open Sans', sans-serif;
         height: 100vh;
         background-color:rgba(255,255,255,.5);
         -webkit-transition: 0.5s ease-in-out;
-    -moz-transition: 0.5s ease-in-out;
-    -o-transition: 0.5s ease-in-out;
-    transition: 0.5s ease-in-out;
+        -moz-transition: 0.5s ease-in-out;
+        -o-transition: 0.5s ease-in-out;
+        transition: 0.5s ease-in-out;
         .navigation__list {
             flex-direction: column;
             align-items: center;
@@ -532,6 +549,11 @@ $font: 'Open Sans', sans-serif;
 
     .ask {
         .list__questions {
+
+            .question__item .question__title{
+                max-width: 210px;
+                line-height: 22px;
+            }
             .question__item {
                 //padding-right: 40%;
                 .question {
