--- a/itRacedData/assets/styles/index.css
+++ b/itRacedData/assets/styles/index.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .button {
   background: #58A086;
   padding: 10px 15px;
@@ -68,9 +67,7 @@
 }
 .header .header__content .menu__btn {
   display: flex;
-  /* используем flex для центрирования содержимого */
   align-items: center;
-  /* центрируем содержимое кнопки */
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -125,6 +122,7 @@
   line-height: 16px;
   color: #1A4043;
   position: relative;
+  transition: 0.3s;
 }
 .header .header__content .header__navigation .navigation__item.active {
   font-weight: 700;
@@ -261,7 +259,11 @@
 .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage {
   flex-basis: 16%;
   position: relative;
-  transition: 0.5s ease;
+  transition: 0.3s ease;
+  cursor: default;
+}
+.advantage .wrapper .advantage__content .wrapper__advantages .block-advantage:hover {
+  transform: scale(1.1);
 }
 .advantage .wrapper .advantage__content .wrapper__advantages .block-advantage::before {
   content: "";
@@ -499,6 +501,7 @@
   line-height: 16px;
   color: #fff;
   font-weight: 300;
+  transition: 0.3s;
 }
 .footer .footer-block .footer__navigation .navigation__list .list__link.active {
   font-weight: 700;
@@ -542,7 +545,6 @@
 }
 .footer .footer-description .text span {
   padding-right: 20px;
-  text-transform: uppercase;
   font-weight: 400;
   font-size: 14px;
 }
