--- a/itRacedData/assets/styles/order.scss
+++ b/itRacedData/assets/styles/order.scss
@@ -127,9 +127,9 @@ $font: 'Open Sans', sans-serif;
             top: 11px;
         }
 
-#menu__toggle, .menu__btn {
-    display: none;
-}
+        #menu__toggle, .menu__btn {
+            display: none;
+        }
 
         .header__navigation {
             margin-left: auto;
@@ -153,16 +153,13 @@ $font: 'Open Sans', sans-serif;
                 line-height: 16px;
                 color: $color-text;
                 position: relative;
+                transition: 0.3s;
             }
 
             .navigation__item:hover {
                 font-weight: 700;
                 
             }
-
-            // .navigation__item {
-            //     margin-left: 20px;
-            // } 
         }
     }
 }
@@ -265,13 +262,12 @@ $font: 'Open Sans', sans-serif;
             border: 1px solid rgba(26, 64, 67, 0.5);
             padding: 13px 10px;
             font-family: $font;
-            font-weight: 300;
+            font-weight: 400;
             font-size: 16px;
             line-height: 16px;
             color: $color-text;
 
             &::placeholder {
-                text-transform: uppercase;
                 font-family: $font;
             font-weight: 300;
             font-size: 16px;
@@ -324,12 +320,11 @@ $font: 'Open Sans', sans-serif;
                 justify-content: space-between;
                 align-items: center;
                 margin-bottom: 30px;
-                .address {
+                .Address {
                     flex-basis: 50%;
                 }
-                .unit {
+                .Unit {
                     margin-left: 20px;
-                    margin-right: auto;
                 }
     
                 &:nth-child(2) {
@@ -354,7 +349,7 @@ $font: 'Open Sans', sans-serif;
             font-weight: 700;
             font-size: 24px;
             position: absolute;
-            top: 10px;
+            bottom: 10px;
             right: 0;
         }
 
@@ -372,6 +367,8 @@ $font: 'Open Sans', sans-serif;
             cursor: pointer;
             font-weight: 700;
             font-size: 24px;
+            margin-left: 10px;
+            margin-right: auto;
             
         }
 
@@ -450,6 +447,7 @@ $font: 'Open Sans', sans-serif;
                     line-height: 16px;
                     color: #fff;
                     font-weight: 300;
+                    transition: 0.3s;
 
                     &:hover {
                         font-weight: 700;
@@ -506,7 +504,7 @@ $font: 'Open Sans', sans-serif;
 
             span {
                 padding-right: 20px;
-                text-transform: uppercase;
+                text-transform: capitalize;
                 font-weight: 400;
                 font-size: 14px;
             }
@@ -564,7 +562,7 @@ $font: 'Open Sans', sans-serif;
                 -moz-transform: rotate(45deg);
                 -ms-transform: rotate(45deg);
                 -o-transform: rotate(45deg);
-}
+            }
             #menu__toggle:checked ~ .menu__btn > span::before {
                 top: 0;
                 transform: rotate(0);
@@ -572,7 +570,7 @@ $font: 'Open Sans', sans-serif;
                 -moz-transform: rotate(0);
                 -ms-transform: rotate(0);
                 -o-transform: rotate(0);
-}
+            }
             #menu__toggle:checked ~ .menu__btn > span::after {
                 top: 0;
                 transform: rotate(90deg);
@@ -580,7 +578,7 @@ $font: 'Open Sans', sans-serif;
                 -moz-transform: rotate(90deg);
                 -ms-transform: rotate(90deg);
                 -o-transform: rotate(90deg);
-}
+            }
             #menu__toggle:checked ~ .header__navigation {
                 visibility: visible;
                 right: 0;
@@ -597,18 +595,18 @@ $font: 'Open Sans', sans-serif;
         height: 100vh;
         background-color:rgba(255,255,255,.5);
         -webkit-transition: 0.5s ease-in-out;
-    -moz-transition: 0.5s ease-in-out;
-    -o-transition: 0.5s ease-in-out;
-    transition: 0.5s ease-in-out;
+        -moz-transition: 0.5s ease-in-out;
+        -o-transition: 0.5s ease-in-out;
+        transition: 0.5s ease-in-out;
         .navigation__list {
             flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        width: 70%;
-        background: #fff;
-        margin-left: auto;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            width: 70%;
+            background: #fff;
+            margin-left: auto;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
         }
     }
 
@@ -616,12 +614,15 @@ $font: 'Open Sans', sans-serif;
         display: none;
     }
 
+    .order .order__content .wrapper-premises .premises .Unit{
+        margin-left: 0;
+    }
+
     .order {
         .order__content {
             form {
                 width: 100%;
                 text-align: center;
-
             }
 
             p {
@@ -653,7 +654,7 @@ $font: 'Open Sans', sans-serif;
                     flex-basis:55%;
                 }
 
-                .address {
+                .Address {
                     order: 1;
                     margin-bottom: 20px;
                 }
@@ -662,10 +663,10 @@ $font: 'Open Sans', sans-serif;
                 }
 
                 .remove{
-                    order: 2;
+                    order: 3;
                 }
-                .unit {
-                    order:3;
+                .Unit {
+                    order:2;
                 }
             }
 
