rafactor: formatting code

--- a/itRacedData/assets/styles/faq.scss
+++ b/itRacedData/assets/styles/faq.scss
@@ -62,7 +62,7 @@ $font: 'Open Sans', sans-serif;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.15);
     position: fixed;
     width: 100vw;
-    z-index: 1;
+    z-index: 10000;
 
     .wrapper {
         max-width: 1033px;
@@ -83,8 +83,8 @@ $font: 'Open Sans', sans-serif;
         }
 
         .menu__btn {
-            display: flex; /* используем flex для центрирования содержимого */
-            align-items: center;  /* центрируем содержимое кнопки */
+            display: flex;
+            align-items: center; 
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
@@ -147,7 +147,8 @@ $font: 'Open Sans', sans-serif;
                 line-height: 16px;
                 color: $color-text;
                 position: relative;
-                transition:  .3s;
+                transition: .3s;
+
                 &.active {
                     font-weight: 700;
                 }
@@ -156,7 +157,7 @@ $font: 'Open Sans', sans-serif;
             .navigation__item:hover {
                 font-weight: 700;
                 
-            }
+            } 
         }
     }
 }
