--- a/itRacedData/assets/styles/component.css
+++ b/itRacedData/assets/styles/component.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .button {
   background: #58A086;
   padding: 10px 15px;
@@ -48,7 +47,7 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.15);
   position: fixed;
   width: 100vw;
-  z-index: 1;
+  z-index: 10000;
 }
 .header .wrapper {
   max-width: 1033px;
@@ -68,9 +67,7 @@
 }
 .header .header__content .menu__btn {
   display: flex;
-  /* используем flex для центрирования содержимого */
   align-items: center;
-  /* центрируем содержимое кнопки */
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -373,7 +370,6 @@
 }
 .footer .footer-description .text span {
   padding-right: 20px;
-  text-transform: capitalize;
   font-weight: 400;
   font-size: 14px;
 }
@@ -528,19 +524,19 @@
   }
   .contact .contact__content .contact__information .block-contact:nth-child(2) p {
     background: url(../icon/email-green.svg) no-repeat;
-    background-position: top left;
+    background-position: center left;
   }
   .contact .contact__content .contact__information .block-contact:nth-child(3) p {
     background: url(../icon/Phone-green.svg) no-repeat;
-    background-position: top left;
+    background-position: center left;
   }
   .contact .contact__content .contact__information .block-contact:nth-child(4) p {
     background: url(../icon/geo-green.svg) no-repeat;
-    background-position: top left;
+    background-position: top 5px left;
   }
   .contact .contact__content .contact__information .block-contact:last-child p {
     background: url(../icon/geo-green.svg) no-repeat;
-    background-position: top left;
+    background-position: top 5px left;
   }
 
   .footer {
