--- a/itRacedData/assets/styles/component.scss
+++ b/itRacedData/assets/styles/component.scss
@@ -60,7 +60,7 @@ $font: 'Open Sans', sans-serif;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.15);
     position: fixed;
     width: 100vw;
-    z-index: 1;
+    z-index: 10000;
 
     .wrapper {
         max-width: 1033px;
@@ -81,8 +81,8 @@ $font: 'Open Sans', sans-serif;
         }
 
         .menu__btn {
-            display: flex; /* используем flex для центрирования содержимого */
-            align-items: center;  /* центрируем содержимое кнопки */
+            display: flex;
+            align-items: center; 
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
@@ -390,12 +390,10 @@ $font: 'Open Sans', sans-serif;
                     line-height: 16px;
                     color: #fff;
                     font-weight: 300;
-                    transition: .3s;
-
+                    transition: 0.3s;
                     &.active {
                         font-weight: 700;
                     }
-
                     &:hover {
                         font-weight: 700;
                     }
@@ -451,7 +449,6 @@ $font: 'Open Sans', sans-serif;
 
             span {
                 padding-right: 20px;
-                text-transform: capitalize;
                 font-weight: 400;
                 font-size: 14px;
             }
@@ -641,7 +638,7 @@ $font: 'Open Sans', sans-serif;
                 .block-contact:nth-child(2) {
                     p {
                         background: url(../icon/email-green.svg) no-repeat;
-                        background-position: top left;
+                        background-position: center left;
                         
                     }
                 }
@@ -649,7 +646,7 @@ $font: 'Open Sans', sans-serif;
                 .block-contact:nth-child(3) {
                     p {
                         background: url(../icon/Phone-green.svg) no-repeat;
-                        background-position: top left;
+                        background-position: center left;
                         
                     }
                 }
@@ -657,7 +654,7 @@ $font: 'Open Sans', sans-serif;
                 .block-contact:nth-child(4) {
                     p {
                         background: url(../icon/geo-green.svg) no-repeat;
-                        background-position: top left;
+                        background-position: top 5px left;
                         
                     }
                 }
@@ -665,7 +662,7 @@ $font: 'Open Sans', sans-serif;
                 .block-contact:last-child {
                     p {
                         background: url(../icon/geo-green.svg) no-repeat;
-                        background-position: top left;
+                        background-position: top 5px left;
                         
                     }
                 }
