--- a/itRacedData/assets/styles/order.css
+++ b/itRacedData/assets/styles/order.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .button {
   background: #58A086;
   padding: 10px 15px;
@@ -52,7 +51,7 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.15);
   position: fixed;
   width: 100vw;
-  z-index: 1;
+  z-index: 10000;
 }
 .header .wrapper {
   max-width: 1033px;
@@ -72,9 +71,7 @@
 }
 .header .header__content .menu__btn {
   display: flex;
-  /* используем flex для центрирования содержимого */
   align-items: center;
-  /* центрируем содержимое кнопки */
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -130,6 +127,9 @@
   color: #1A4043;
   position: relative;
   transition: 0.3s;
+}
+.header .header__content .header__navigation .navigation__item.active {
+  font-weight: 700;
 }
 .header .header__content .header__navigation .navigation__item:hover {
   font-weight: 700;
