--- a/itRacedData/assets/styles/order.scss
+++ b/itRacedData/assets/styles/order.scss
@@ -66,7 +66,7 @@ $font: 'Open Sans', sans-serif;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.15);
     position: fixed;
     width: 100vw;
-    z-index: 1;
+    z-index: 10000;
 
     .wrapper {
         max-width: 1033px;
@@ -87,8 +87,8 @@ $font: 'Open Sans', sans-serif;
         }
 
         .menu__btn {
-            display: flex; /* используем flex для центрирования содержимого */
-            align-items: center;  /* центрируем содержимое кнопки */
+            display: flex;
+            align-items: center; 
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
@@ -98,8 +98,6 @@ $font: 'Open Sans', sans-serif;
             cursor: pointer;
             z-index: 1;
         }
-
-
 
         .menu__btn > span,
         .menu__btn > span::before,
@@ -153,17 +151,20 @@ $font: 'Open Sans', sans-serif;
                 line-height: 16px;
                 color: $color-text;
                 position: relative;
-                transition: 0.3s;
+                transition: .3s;
+
+                &.active {
+                    font-weight: 700;
+                }
             }
 
             .navigation__item:hover {
                 font-weight: 700;
                 
-            }
+            } 
         }
     }
 }
-
 .order {
     padding-top: 140px;
     padding-bottom: 100px;
