--- a/itRacedData/assets/styles/services.css
+++ b/itRacedData/assets/styles/services.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .button {
   background: #58A086;
   padding: 10px 15px;
@@ -48,7 +47,7 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.15);
   position: fixed;
   width: 100vw;
-  z-index: 1;
+  z-index: 10000;
 }
 .header .wrapper {
   max-width: 1033px;
@@ -68,9 +67,7 @@
 }
 .header .header__content .menu__btn {
   display: flex;
-  /* используем flex для центрирования содержимого */
   align-items: center;
-  /* центрируем содержимое кнопки */
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -125,6 +122,7 @@
   line-height: 16px;
   color: #1A4043;
   position: relative;
+  transition: 0.3s;
 }
 .header .header__content .header__navigation .navigation__item.active {
   font-weight: 700;
